--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
-MONGO_URI=mongodb+srv://saurabhch9369_db:India%40123@cluster0.6yztwoj.mongodb.net/bookCatalog?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://ajaychaurasiya:Bookdb1234@cluster0.6yztwoj.mongodb.net/bookCatalog?retryWrites=true&w=majority
 PORT = 5000
 JWT_SECRET = mySecret
 JWT_EXPIRES_IN=7d
